# meta-hailo-soc

./: README.md
kas/: hailo15-evb-security-camera-machine.yml  hailo15-evb.yml  hailo15-sbc-machine.yml  hailo15-sbc.yml  hailo15-vpu-base.yml  yocto-base.yml
meta-hailo-bsp/: README.md
meta-hailo-bsp-examples/conf/: layer.conf
meta-hailo-bsp/classes/: hailo-cc312-sign.bbclass
meta-hailo-bsp/conf/: layer.conf
meta-hailo-bsp/conf/machine/: hailo15-base.inc  hailo15-evb-2-camera-vpu.conf  hailo15-evb-security-camera.conf  hailo15-evb.inc  hailo15-ginger-soc.conf  hailo15-lavender-dsp.conf  hailo15-lavender.conf  hailo15-sbc.conf  hailo15-veloce.conf  hailo15-vp.conf
meta-hailo-bsp/hailo15_board_tools/: CHANGELOG.md  setup.cfg
meta-hailo-bsp/hailo15_board_tools/hailo15_board_tools/: hailo15_spi_flash_program.py  spi_flash_program.py  uart_boot_fw_loader.py
meta-hailo-bsp/hailo15_board_tools/hailo15_board_tools/flash_programmers/: flash_programmer.py  ftdi_flash_programmer.py  uart_recovery_manager.py
meta-hailo-bsp/recipes-bsp/alsa-state/: alsa-state.bbappend
meta-hailo-bsp/recipes-bsp/cryptocell-312-runtime-native/: cryptocell-312-runtime-native.bb
meta-hailo-bsp/recipes-bsp/hailo-ddr-configuration-native/: hailo-ddr-configuration-native.bb
meta-hailo-bsp/wic/: sd.wks
meta-hailo-dsp/conf/: layer.conf
meta-hailo-imaging/: README
meta-hailo-imaging/conf/: layer.conf
meta-hailo-linux/: README
meta-hailo-linux/conf/: layer.conf
meta-hailo-media-library/classes/: media-library-base.bbclass
meta-hailo-media-library/conf/: layer.conf
(+98 files in other folders)
