[metadata]
name = hailo15_board_tools
version = 1.1.2
description = Hailo15 Board Tools
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    pyserial==3.5
    pyspiflash==0.6.3

[options.entry_points]
console_scripts =
        hailo15_spi_flash_program = hailo15_board_tools.hailo15_spi_flash_program:main
        spi_flash_program = hailo15_board_tools.spi_flash_program:main
        uart_boot_fw_loader = hailo15_board_tools.uart_boot_fw_loader:main

[flake8]
exclude = .git, __pycache__, build, dist
max-line-length = 120
max-complexity = 10
